Stop hero image from growing too tall

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,6 +4,7 @@
   height: 62.5vw;
   width: 100vw;
   max-width: 100vw;
+  max-height: calc(var(--max-site-width) * 1080 / 1920);
 
   display: flex;
   flex-direction: column;
