--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,7 @@ $mid-size: 1.75rem;
 
   --max-content-width: 65rem;
   --max-body-width: 85rem;
+  --max-site-width: 100rem;
   --header-height: 4.5rem;
   --footer-height: 4.5rem;
   --footer-mobile-height: 6.5rem;
